Update input data file paths.

--- a/src/ExtFig2g.ipynb
+++ b/src/ExtFig2g.ipynb
@@ -25,10 +25,7 @@
     "from lazy_ops import DatasetView\n",
     "import napari\n",
     "import dask.array as da\n",
-    "import zarr\n",
-    "\n",
-    "from datetime import datetime\n",
-    "startTime = datetime.now()"
+    "import zarr"
    ]
   },
   {
@@ -105,42 +102,18 @@
    "source": [
     "sample_name = 'WD-76845-097'\n",
     "\n",
-    "cylinter_input_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/'\n",
-    "    )\n",
+    "tif_path = '../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
+    "seg_path = '../input/Dataset2(CRC)/seg/WD-76845-097.ome.tif'\n",
+    "sc_data_path = '../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet'\n",
+    "for_channels_path = '../input/Dataset2(CRC)/CRC-097_clean_consensus_clustering.parquet'\n",
+    "cylinter_config_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_config.yml'\n",
+    "markers_path = '../input/Dataset2(CRC)/markers.csv'\n",
+    "image_contrast_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_contrast_limits.yml'\n",
     "\n",
-    "tif_path = cylinter_input_path + f'tif/{sample_name}.ome.tif'\n",
-    "he_path = cylinter_input_path + f'hema_eosin.ome.tif'\n",
-    "seg_path = cylinter_input_path + f'seg/{sample_name}.ome.tif'\n",
-    "\n",
-    "sc_data_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/output_raw/'\n",
-    "    'checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "\n",
-    "for_channels_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/clean_quant/output_3d_v2/'\n",
-    "    'consensus_clustering.parquet'\n",
-    "    )\n",
-    "\n",
-    "cylinter_config_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/clean_quant/config.yml'\n",
-    "    )\n",
-    "\n",
-    "markers_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/clean_quant/markers.csv'\n",
-    "    )\n",
-    "\n",
-    "image_contrast_path = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/clean_quant/output_3d_v2/'\n",
-    "    'contrast/contrast_limits.yml'\n",
-    "    )\n",
-    "\n",
-    "# import clustered single-cell data\n",
+    "# import single-cell data\n",
     "data = pd.read_parquet(sc_data_path)\n",
     "for_channels = pd.read_parquet(for_channels_path)\n",
     "\n",
-    "# drop noisy cells (cluster=-1) from VAE clusters\n",
     "data = data[data['CellID'].isin(\n",
     "    [41060, 1097589, 464713, 503745, 808624, 468824, 413086, 9974, 972474,\n",
     "     1229834, 209828, 664140, 183871, 515864, 509302, 108317, 437627, 481101,\n",
@@ -172,58 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "372c0531-ba6f-47e0-af8d-b2ec723abefa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 437627  413086    9974  464713  209828  515864  509302  972474  183871\n",
-      "   41060  237841 1097589  808624  108317  481101  936016  485627   82322\n",
-      "  503745  252763  697962  878465  468824  664140 1229834]\n",
-      "Completed in 0:01:19.970082\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# add H&E image (single channel image)\n",
-    "# tiff = tifffile.TiffFile(he_path, is_ome=False)\n",
-    "# pyramid = [\n",
-    "#     zarr.open(tiff.series[0].levels[0].aszarr())[i] for i in\n",
-    "#     list(range(len(tiff.series[0].levels)))\n",
-    "#     ]\n",
-    "# pyramid = [DatasetView(i).lazy_transpose([1, 2, 0]) for i in pyramid]\n",
-    "# pyramid = [da.from_zarr(z) for z in pyramid]\n",
-    "#\n",
-    "# viewer = napari.view_image(pyramid, rgb=True, name='H&E')\n",
-    "\n",
-    "# or add H&E image (separate RGB channels)\n",
-    "for color, channel in zip(['red', 'green', 'blue'], [0, 1, 2]):\n",
-    "\n",
-    "    img, min, max = single_channel_pyramid(\n",
-    "        glob.glob(he_path)[0], channel=channel\n",
-    "        )\n",
-    "\n",
-    "    if channel == 0:\n",
-    "        viewer = napari.view_image(\n",
-    "            img, rgb=False, colormap=color, blending='additive',\n",
-    "            visible=False, name=f'H&E_{color}', contrast_limits=(min, max)\n",
-    "            )\n",
-    "    else:\n",
-    "        viewer.add_image(\n",
-    "            img, rgb=False, colormap=color, blending='additive',\n",
-    "            visible=False, name=f'H&E_{color}', contrast_limits=(min, max)\n",
-    "            )\n",
-    "\n",
     "# read DNA1 channel\n",
     "dna, min, max = single_channel_pyramid(\n",
     "    glob.glob(tif_path)[0], channel=0\n",
     "    )\n",
     "\n",
     "# add DNA1 channel to Napari image viewer\n",
-    "viewer.add_image(\n",
+    "viewer = napari.view_image(\n",
     "    dna, rgb=False, blending='additive',\n",
     "    colormap='gray', visible=True, opacity=1.0,\n",
     "    name='DNA1', contrast_limits=(min, max)\n",
@@ -257,14 +190,16 @@
     "palette_multiplier = ceil(num_clusters/num_colors)\n",
     "colors = list(cm.tab20.colors)*palette_multiplier\n",
     "colors = colors[0:num_clusters]\n",
-    "print(data['CellID'].unique())\n",
+    "\n",
+    "# print(data['CellID'].unique())\n",
+    "\n",
     "for c, id in zip(\n",
     "  colors, sorted(data['CellID'].unique(), reverse=True)\n",
     "  ):\n",
     "    centroids = data[\n",
     "        ['Y_centroid', 'X_centroid']][data['CellID'] == id]\n",
     "    viewer.add_points(\n",
-    "        centroids, name=f'CD4_{id}',\n",
+    "        centroids, name=f'Cell_{id}',\n",
     "        face_color='lime',\n",
     "        edge_color='lime',\n",
     "        edge_width=0.0, size=500.0, opacity=1.0, blending='translucent',\n",
@@ -286,8 +221,7 @@
     "viewer.scale_bar.unit = 'um'\n",
     "\n",
     "# run Napari image viewer\n",
-    "napari.run()\n",
-    "print('Completed in ' + str(datetime.now() - startTime))"
+    "napari.run()"
    ]
   }
  ],
