--- a/src/Fig1a,b.ipynb
+++ b/src/Fig1a,b.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "3b712e65-04b2-49a6-bd86-5ee433cccb9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/greg/venvs/cylinter/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import yaml\n",
@@ -110,18 +101,16 @@
    "source": [
     "# read and process input data\n",
     "\n",
-    "# create save directory\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/tissue_fold_codex'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig1a,b' \n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# read aggregate csv data\n",
-    "agg = pd.read_parquet(\n",
-    "    '/Users/greg/Desktop/HBM946.GRVG.379/output/checkpoints/aggregateData.parquet' \n",
-    ")\n",
+    "agg = pd.read_parquet('../input/Dataset6(CODEX6)/CODEX6_clean_cylinter_aggregateData.parquet')\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('/Users/greg/Desktop/HBM946.GRVG.379/markers.csv')\n",
+    "markers = pd.read_csv('../input/Dataset6(CODEX6)/markers.csv')\n",
     "\n",
     "# log-transform columns to be used in clustering\n",
     "clustering_cols = [\n",
@@ -150,11 +139,11 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid'] - row_min\n",
     "\n",
     "# read segmentation outlines and crop\n",
-    "seg = imread('/Users/greg/Desktop/HBM946.GRVG.379/seg/HBM946.GRVG.379.ome.tif', key=0)\n",
+    "seg = imread('../input/Dataset6(CODEX6)/seg/HBM946.GRVG.379.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max]\n",
     "\n",
     "# read DNA1 image, crop, and convert to RGB\n",
-    "dna = imread('/Users/greg/Desktop/HBM946.GRVG.379/tif/HBM946.GRVG.379.ome.tif', key=0)\n",
+    "dna = imread('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float -= dna_float.min()\n",
     "dna_float /= dna_float.max()\n",
@@ -162,7 +151,7 @@
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read SOX9 channel of image, crop, and convert to RGB with colormap\n",
-    "sox9_raw = imread('/Users/greg/Desktop/HBM946.GRVG.379/tif/HBM946.GRVG.379.ome.tif', key=6)\n",
+    "sox9_raw = imread('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', key=6)\n",
     "sox9 = np.clip(sox9_raw, sox9_raw.min(), 9411)  # clipping to preferred intensity\n",
     "sox9_float = img_as_float(sox9)\n",
     "sox9_float -= sox9_float.min()\n",
@@ -211,7 +200,7 @@
     "cbar = plt.colorbar()\n",
     "cbar.set_alpha(1.0)\n",
     "cbar.set_label('SOX9 signal', labelpad=20, rotation=90)\n",
-    "plt.savefig(os.path.join(save_dir, 'image.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'image.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -223,54 +212,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open CODEX image in Napari to select ROIs (if not already done) \n",
+    "# open CODEX image in Napari to select ROIs \n",
+    "viewer = napari.Viewer()\n",
     "\n",
-    "# read saved polygon vertices (if ROIs have been drawn already) \n",
-    "if os.path.exists(os.path.join(save_dir, 'rois.yml')):\n",
+    "viewer.add_image(dna_crop, opacity=1.0, rgb=False, name='DNA1')\n",
     "\n",
-    "    polygon_dict = yaml.safe_load(open(os.path.join(save_dir, 'rois.yml')))\n",
-    "    \n",
-    "    shapes = [polygon_dict[i][0] for i in range(0, len(polygon_dict.keys()))]\n",
-    "    polygons = [polygon_dict[i][1] for i in range(0, len(polygon_dict.keys()))]\n",
-    "    \n",
-    "else:\n",
-    "    viewer = napari.Viewer()\n",
-    "\n",
-    "    viewer.add_image(dna_crop, opacity=1.0, rgb=False, name='DNA1')\n",
-    "\n",
-    "    viewer.add_image(\n",
+    "viewer.add_image(\n",
     "        seg_crop, rgb=False, blending='additive', opacity=1.0, \n",
     "        colormap='green', visible=False, name='segmentation'\n",
     "    )\n",
     "\n",
-    "    viewer.add_image(\n",
-    "        sox9_crop, rgb=False, blending='additive', colormap='magma',\n",
-    "        visible=True, name='SOX9'\n",
-    "    )\n",
-    "    \n",
-    "    selection_layer = viewer.add_shapes(\n",
-    "        shape_type='polygon',\n",
-    "        ndim=2,\n",
-    "        face_color=[1.0, 1.0, 1.0, 0.2],\n",
-    "        edge_color=[0.0, 0.66, 1.0, 1.0],\n",
-    "        edge_width=10.0,\n",
-    "        name='ROI(s)'\n",
-    "    )\n",
-    "    \n",
-    "    viewer.scale_bar.visible = True\n",
-    "    viewer.scale_bar.unit = 'um'\n",
-    "    \n",
-    "    napari.run()\n",
-    "    \n",
-    "    # store ROIs\n",
-    "    polygon_dict = {}\n",
-    "    \n",
-    "    for e, (shape_type, roi) in enumerate(\n",
-    "            zip(selection_layer.shape_type, selection_layer.data)):\n",
-    "        polygon_dict[e] = [shape_type, roi.tolist()]\n",
+    "viewer.add_image(\n",
+    "    sox9_crop, rgb=False, blending='additive', colormap='magma',\n",
+    "    visible=True, name='SOX9'\n",
+    ")\n",
     "\n",
-    "    f = open(os.path.join(save_dir, 'rois.yml'), 'w')\n",
-    "    yaml.dump(polygon_dict, f)"
+    "# read saved polygon vertices (if ROIs have been drawn already) \n",
+    "if os.path.exists(os.path.join(out_dir, 'rois.yml')):\n",
+    "\n",
+    "    polygon_dict = yaml.safe_load(open(os.path.join(out_dir, 'rois.yml')))\n",
+    "        \n",
+    "    shapes = [polygon_dict[i][0] for i in range(0, len(polygon_dict.keys()))]\n",
+    "    polygons = [polygon_dict[i][1] for i in range(0, len(polygon_dict.keys()))]\n",
+    "\n",
+    "    selection_layer = viewer.add_shapes(\n",
+    "        data=polygons,\n",
+    "        shape_type=shapes,\n",
+    "        ndim=2,\n",
+    "        face_color=[0.0, 1.0, 0.0, 0.0],  # [1.0, 1.0, 1.0, 0.2]\n",
+    "        edge_color=[0.0, 1.0, 0.0, 1.0], # [0.0, 0.66, 1.0, 1.0]\n",
+    "        edge_width=20.0,\n",
+    "        name='ROI(s)')\n",
+    "\n",
+    "else:\n",
+    "    selection_layer = viewer.add_shapes(\n",
+    "        shape_type='polygon', ndim=2, face_color=[1.0, 1.0, 1.0, 0.2],\n",
+    "        edge_color=[0.0, 0.66, 1.0, 1.0], edge_width=10.0, name='ROI(s)'\n",
+    "    )\n",
+    "    \n",
+    "viewer.scale_bar.visible = True\n",
+    "viewer.scale_bar.unit = 'um'\n",
+    "\n",
+    "napari.run()\n",
+    "    \n",
+    "# store ROIs\n",
+    "for e, (shape_type, roi) in enumerate(\n",
+    "        zip(selection_layer.shape_type, selection_layer.data)):\n",
+    "    polygon_dict[e] = [shape_type, roi.tolist()]\n",
+    "\n",
+    "f = open(os.path.join(out_dir, 'rois.yml'), 'w')\n",
+    "yaml.dump(polygon_dict, f)"
    ]
   },
   {
@@ -319,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "989fe154-1a4e-457d-88b1-04114e5d4f7a",
    "metadata": {},
    "outputs": [
@@ -335,7 +326,8 @@
      "output_type": "stream",
      "text": [
       "/Users/greg/venvs/cylinter/lib/python3.11/site-packages/umap/umap_.py:1943: UserWarning: n_jobs value -1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
-      "  warn(f\"n_jobs value {self.n_jobs} overridden to 1 by setting random_state. Use no seed for parallelism.\")\n"
+      "  warn(f\"n_jobs value {self.n_jobs} overridden to 1 by setting random_state. Use no seed for parallelism.\")\n",
+      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
      ]
     },
     {
@@ -371,7 +363,7 @@
     ")\n",
     "\n",
     "plt.colorbar(sc, label='SOX9')\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_sox9.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_sox9.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -435,7 +427,7 @@
     "    bbox_to_anchor=[0.82, 0.99], labelspacing=0.9, frameon=False\n",
     ")\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_gate.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_gate.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -516,7 +508,7 @@
     "    handles=legend_elements, prop={'size': 9}, bbox_to_anchor=(1.3, 1),\n",
     "    loc='upper right', frameon=True\n",
     ")\n",
-    "plt.savefig(os.path.join(save_dir, 'clustering.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'clustering.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -564,7 +556,7 @@
     "g.fig.suptitle('channel_z-scores.pdf', y=0.995, fontsize=10)\n",
     "g.ax_heatmap.set_yticklabels(g.ax_heatmap.get_yticklabels(), rotation=0)\n",
     "plt.savefig(\n",
-    "    os.path.join(save_dir, 'channel_z-scores.pdf'), bbox_inches='tight'\n",
+    "    os.path.join(out_dir, 'channel_z-scores.pdf'), bbox_inches='tight'\n",
     ")\n",
     "plt.show()\n",
     "plt.close('all')"
