--- a/src/Fig1c.ipynb
+++ b/src/Fig1c.ipynb
@@ -134,10 +134,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create save directory\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/aggregate_artifact'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)"
+    "# out dir\n",
+    "out_dir = '../output/Fig1c'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)"
    ]
   },
   {
@@ -148,13 +148,14 @@
    "outputs": [],
    "source": [
     "# read unfiltered EMIT dataset\n",
-    "data = pd.read_parquet('/Volumes/My Book/cylinter_input/emit22_full/output/checkpoints/aggregateData.parquet')\n",
+    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')\n",
     "\n",
     "# isolate data from target core\n",
     "core_data = data[data['Sample'] == core].copy()\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('/Volumes/My Book/cylinter_input/emit22_full/markers.csv')\n",
+    "markers = pd.read_csv('../input/Dataset3(TMA)/markers.csv')\n",
+    "#'/Volumes/My Book/cylinter_input/emit22_full/markers.csv')\n",
     "\n",
     "# isolate immunomarker channels\n",
     "include = [i for i in core_data.columns if 'DNA' not in i if i in list(markers['marker_name'])]\n",
@@ -194,21 +195,6 @@
     "col_min = 0\n",
     "col_max = 2943\n",
     "\n",
-    "# row_min = 1700\n",
-    "# row_max = 2090\n",
-    "# col_min = 1000\n",
-    "# col_max = 1630\n",
-    "\n",
-    "# row_min = 11460\n",
-    "# row_max = 13180\n",
-    "# col_min = 15400\n",
-    "# col_max = 18250\n",
-    "\n",
-    "# row_min = 7750\n",
-    "# row_max = 10000\n",
-    "# col_min = 14000\n",
-    "# col_max = 17900\n",
-    "\n",
     "# select cells within cropped image\n",
     "data_crop = core_data[\n",
     "    (core_data['X_centroid'].between(col_min, col_max)) &\n",
@@ -220,18 +206,21 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid']-row_min\n",
     "\n",
     "# read segmentation outlines of target core and crop to target size\n",
-    "seg = imread(f'/Volumes/My Book/cylinter_input/emit22_full/seg/{core}.ome.tif', key=0)\n",
+    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
+    "# seg = imread(f'/Volumes/My Book/cylinter_input/emit22_full/seg/{core}.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max].copy()\n",
     "\n",
     "# read DNA1 image of target core and crop to target size\n",
-    "dna = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "# dna = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float = (dna_float - np.min(dna_float)) / (np.max(dna_float) - np.min(dna_float))  # normalize 0-1\n",
     "dna_crop = dna_float[row_min:row_max, col_min:col_max].copy()\n",
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read CD63 image of target core and crop to target size\n",
-    "cd63 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=18)\n",
+    "cd63 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=18)\n",
+    "# cd63 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=18)\n",
     "cd63_float = img_as_float(cd63)\n",
     "cd63_float = (cd63_float - np.min(cd63_float)) / (np.max(cd63_float) - np.min(cd63_float))  # normalize 0-1\n",
     "cd63_crop = cd63_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -250,7 +239,7 @@
     "# plot merged image\n",
     "plt.imshow(dna_crop_rgb, cmap='magma')\n",
     "plt.grid(False)\n",
-    "plt.savefig(os.path.join(save_dir, 'raster.png'), dpi=600)\n",
+    "plt.savefig(os.path.join(out_dir, 'raster.png'), dpi=600)\n",
     "\n",
     "# plt.colorbar(format=ticker.FuncFormatter(fmt))\n",
     "cbar = plt.colorbar()\n",
@@ -258,7 +247,7 @@
     "cbar.set_label('CD63 signal per pixel', labelpad=20, rotation=270)\n",
     "# plt.title(f'Core {core}')\n",
     "# cbar.draw_all()\n",
-    "plt.savefig(os.path.join(save_dir, 'vector.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'vector.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -306,7 +295,8 @@
     "dna_crop_rgb += cd63_crop_rgb\n",
     "\n",
     "# read Ki67 image of target core and crop to target size\n",
-    "ki67 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=9)\n",
+    "ki67 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=9)\n",
+    "# ki67 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=9)\n",
     "ki67_float = img_as_float(ki67)\n",
     "ki67_float = (ki67_float - np.min(ki67_float)) / (np.max(ki67_float) - np.min(ki67_float))  # normalize 0-1\n",
     "ki67_crop = ki67_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -320,7 +310,8 @@
     "dna_crop_rgb += ki67_crop_rgb\n",
     "\n",
     "# read pan-CK image of target core and crop to target size\n",
-    "panck = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=10)\n",
+    "panck = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=10)\n",
+    "# panck = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=10)\n",
     "panck_float = img_as_float(panck)\n",
     "panck_float = (panck_float - np.min(panck_float)) / (np.max(panck_float) - np.min(panck_float))  # normalize 0-1\n",
     "panck_crop = panck_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -334,7 +325,8 @@
     "dna_crop_rgb += panck_crop_rgb\n",
     "\n",
     "# read aSMA image of target core and crop to target size\n",
-    "sma = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=14)\n",
+    "sma = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=14)\n",
+    "# sma = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=14)\n",
     "sma_float = img_as_float(sma)\n",
     "sma_float = (sma_float - np.min(sma_float)) / (np.max(sma_float) - np.min(sma_float))  # normalize 0-1\n",
     "sma_crop = sma_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -349,7 +341,8 @@
     "dna_crop_rgb += sma_crop_rgb\n",
     "\n",
     "# read CD32 image of target core and crop to target size\n",
-    "cd32 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=19)\n",
+    "cd32 = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=19)\n",
+    "# cd32 = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=19)\n",
     "cd32_float = img_as_float(cd32)\n",
     "cd32_float = (cd32_float - np.min(cd32_float)) / (np.max(cd32_float) - np.min(cd32_float))  # normalize 0-1\n",
     "cd32_crop = cd32_float[row_min:row_max, col_min:col_max].copy()\n",
@@ -365,8 +358,8 @@
     "plt.imshow(dna_crop_rgb, cmap='magma')\n",
     "plt.grid(False)\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'context.png'), dpi=800)\n",
-    "plt.savefig(os.path.join(save_dir, 'context.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'context.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'context.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -379,60 +372,51 @@
    "outputs": [],
    "source": [
     "# open target core in Napari to select ROIs if it has not already been done \n",
-    "if os.path.exists(os.path.join(save_dir, f'polygon_dict_{core}.pkl')):\n",
-    "    f = open(os.path.join(save_dir, f'polygon_dict_{core}.pkl'), 'rb')\n",
+    "viewer = napari.view_image(dna_crop, opacity=0.5, rgb=False, name='DNA1')\n",
+    "\n",
+    "viewer.add_image(\n",
+    "    seg_crop, rgb=False, blending='additive',\n",
+    "    opacity=0.5, colormap='green', visible=False,\n",
+    "    name='segmentation'\n",
+    "    )\n",
+    "\n",
+    "viewer.add_image(\n",
+    "    cd63_crop, rgb=False, blending='additive',\n",
+    "    colormap='magma', visible=True,\n",
+    "    name='CD63'\n",
+    "    )\n",
+    "\n",
+    "if os.path.exists(os.path.join(out_dir, f'polygon_dict_{core}.pkl')):\n",
+    "    f = open(os.path.join(out_dir, f'polygon_dict_{core}.pkl'), 'rb')\n",
     "    polygon_dict = pickle.load(f)\n",
     "    shapes = [polygon_dict[i][0] for\n",
     "              i in range(0, len(polygon_dict.keys()))]\n",
     "    polygons = [polygon_dict[i][1] for\n",
     "              i in range(0, len(polygon_dict.keys()))]\n",
-    "\n",
-    "else:\n",
-    "\n",
-    "    # gate on anti-CD63 antibody aggregate in Napari\n",
-    "    viewer = napari.view_image(\n",
-    "        dna_crop, opacity=0.5, rgb=False, name='DNA1'\n",
-    "        )\n",
-    "\n",
-    "    viewer.add_image(\n",
-    "        seg_crop, rgb=False, blending='additive',\n",
-    "        opacity=0.5, colormap='green', visible=False,\n",
-    "        name='segmentation'\n",
-    "        )\n",
-    "\n",
-    "    viewer.add_image(\n",
-    "        cd63_crop, rgb=False, blending='additive',\n",
-    "        colormap='magma', visible=True,\n",
-    "        name='CD63'\n",
-    "        )\n",
-    "\n",
+    "    \n",
     "    selection_layer = viewer.add_shapes(\n",
-    "    shape_type='polygon',\n",
-    "    ndim=2,\n",
-    "    face_color=[1.0, 1.0, 1.0, 0.2],\n",
-    "    edge_color=[0.0, 0.66, 1.0, 1.0],\n",
-    "    edge_width=10.0,\n",
-    "    name='ROI(s)'\n",
-    "    )\n",
+    "        data=polygons,\n",
+    "        shape_type=shapes,\n",
+    "        ndim=2,\n",
+    "        face_color=[0.0, 1.0, 0.0, 0.0],  # [1.0, 1.0, 1.0, 0.2]\n",
+    "        edge_color=[0.0, 1.0, 0.0, 1.0], # [0.0, 0.66, 1.0, 1.0]\n",
+    "        edge_width=5.0,\n",
+    "        name='ROI(s)')\n",
+    "else:\n",
+    "    selection_layer = viewer.add_shapes(\n",
+    "        shape_type='polygon', ndim=2, face_color=[1.0, 1.0, 1.0, 0.2],\n",
+    "        edge_color=[0.0, 0.66, 1.0, 1.0], edge_width=10.0, name='ROI(s)'\n",
+    "        )\n",
     "\n",
-    "    # selection_layer = viewer.add_shapes(\n",
-    "    #     data=polygons,\n",
-    "    #     shape_type=shapes,\n",
-    "    #     ndim=2,\n",
-    "    #     face_color=[0.0, 1.0, 0.0, 0.0],  # [1.0, 1.0, 1.0, 0.2]\n",
-    "    #     edge_color=[0.0, 1.0, 0.0, 1.0], # [0.0, 0.66, 1.0, 1.0]\n",
-    "    #     edge_width=5.0,\n",
-    "    #     name='ROI(s)')\n",
+    "napari.run()\n",
     "\n",
-    "    napari.run()\n",
+    "polygon_dict = dict(zip([i for i in range(len(selection_layer.shape_type))],\n",
+    "                  [i for i in zip(selection_layer.shape_type, selection_layer.data)])\n",
+    "              )\n",
     "\n",
-    "    polygon_dict = dict(zip([i for i in range(len(selection_layer.shape_type))],\n",
-    "                      [i for i in zip(selection_layer.shape_type, selection_layer.data)])\n",
-    "                  )\n",
-    "\n",
-    "    f = open(os.path.join(save_dir, f'polygon_dict_{core}.pkl'), 'wb')\n",
-    "    pickle.dump(polygon_dict, f)\n",
-    "    f.close()"
+    "f = open(os.path.join(out_dir, f'polygon_dict_{core}.pkl'), 'wb')\n",
+    "pickle.dump(polygon_dict, f)\n",
+    "f.close()"
    ]
   },
   {
@@ -509,7 +493,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/greg/venvs/cylinter_test/lib/python3.11/site-packages/umap/umap_.py:1943: UserWarning: n_jobs value -1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
+      "/Users/greg/venvs/cylinter/lib/python3.11/site-packages/umap/umap_.py:1943: UserWarning: n_jobs value -1 overridden to 1 by setting random_state. Use no seed for parallelism.\n",
       "  warn(f\"n_jobs value {self.n_jobs} overridden to 1 by setting random_state. Use no seed for parallelism.\")\n",
       "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
      ]
@@ -560,7 +544,7 @@
     "sc = plt.scatter(clus_data['emb1'], clus_data['emb2'], c=clus_data['CD63'], cmap='magma', s=7.5, ec='k', lw=0.1, vmin=2.25)\n",
     "plt.colorbar(sc)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'cmap.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'cmap.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -585,19 +569,19 @@
    "source": [
     "in_roi = clus_data[clus_data['CellID'].isin(cell_ids)]\n",
     "out_roi = clus_data[~clus_data['CellID'].isin(cell_ids)]\n",
-    "# pink #FF6EB0\n",
+    "\n",
     "fig, ax = plt.subplots()\n",
     "plt.scatter(out_roi['emb1'], out_roi['emb2'], c='gainsboro', s=7.5, ec='k', lw=0.0, alpha=1.0)\n",
     "plt.scatter(in_roi['emb1'], in_roi['emb2'], c='tab:blue', s=7.5, ec='k', lw=0.1, alpha=1.0)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'gating.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'gating.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "47896152-e59d-4cec-b96d-11309a744e91",
    "metadata": {},
    "outputs": [
@@ -658,18 +642,10 @@
     "fig, ax = plt.subplots()\n",
     "plt.scatter(clus_data['emb1'], clus_data['emb2'], c=c, cmap=cmap, s=7.5, ec='k', lw=0.1, alpha=1.0)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'clustering.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'clustering.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0175d089-21ef-41d7-9a58-2c446e62693a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
