--- a/src/Fig1i.ipynb
+++ b/src/Fig1i.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet('/Volumes/My Book/cylinter_input/emit22_full/output/checkpoints/aggregateData.parquet')"
+    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')"
    ]
   },
   {
@@ -61,10 +61,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create save directory\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/optical_artifact'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)"
+    "# out dir\n",
+    "out_dir = '../output/Fig1i'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)"
    ]
   },
   {
@@ -75,9 +75,9 @@
    "outputs": [],
    "source": [
     "# read DNA1, pCREB, and segmentation outlines of selected core and crop to target size\n",
-    "dna = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=0)\n",
-    "pcreb = imread(f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif', key=33)\n",
-    "seg = imread(f'/Volumes/My Book/cylinter_input/emit22_full/seg/{core}.ome.tif', key=0)\n",
+    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
+    "pcreb = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=33)\n",
+    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "\n",
     "ymin_crop = 0\n",
     "ymax_crop = dna.shape[1]\n",
@@ -171,17 +171,16 @@
     "\n",
     "plt.grid(False)\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'optical_artifact_img_raster.png'), dpi=600)\n",
+    "plt.savefig(os.path.join(out_dir, 'optical_artifact_img_raster.png'), dpi=600)\n",
     "\n",
     "rect = patches.Rectangle((8, 95), 265, 60, linewidth=2, edgecolor='gray', facecolor='none')\n",
     "plt.gca().add_patch(rect)\n",
-    "# plt.colorbar(format=ticker.FuncFormatter(fmt))\n",
     "cbar = plt.colorbar()\n",
     "cbar.set_alpha(1.0)\n",
     "cbar.set_label('pCREB per pixel', labelpad=20, rotation=90)\n",
     "plt.title(f'Core {core}')\n",
     "plt.scatter(data_rec_zoom['X_centroid'], data_rec_zoom['Y_centroid'], s=2.0, color='lime')\n",
-    "plt.savefig(os.path.join(save_dir, 'optical_artifact_img_vector.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'optical_artifact_img_vector.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -212,7 +211,7 @@
     "plt.plot(np.log10(data_rec_zoom['pCREB']), marker='o', lw=2.0, c='k')\n",
     "plt.xlabel('X coordinate')\n",
     "plt.ylabel('log(pCREB) per cell')\n",
-    "plt.savefig(os.path.join(save_dir, 'optical_artifact_trace.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'optical_artifact_trace.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -273,8 +272,8 @@
     "cbar.set_label('pCREB signal', labelpad=20, rotation=270)\n",
     "# plt.colorbar(format=ticker.FuncFormatter(fmt))\n",
     "plt.title(f'Core {core}')\n",
-    "plt.savefig(os.path.join(save_dir, 'optical_artifact_img_crop.png'), dpi=600)\n",
-    "plt.savefig(os.path.join(save_dir, 'optical_artifact_img_crop.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'optical_artifact_img_crop.png'), dpi=600)\n",
+    "plt.savefig(os.path.join(out_dir, 'optical_artifact_img_crop.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
