--- a/src/Fig1j-ExtFig1d,e.ipynb
+++ b/src/Fig1j-ExtFig1d,e.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "fa824990-e385-440b-a2f8-c18834f667e7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/greg/venvs/cylinter/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import yaml\n",
@@ -173,18 +164,16 @@
    "source": [
     "# read and process input data\n",
     "\n",
-    "# create save directory\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/optical_artifact_codex'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig1j-ExtFig1d,e'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# read aggregate csv data\n",
-    "agg = pd.read_parquet(\n",
-    "    '/Users/greg/Desktop/HBM524.VWGB.378/output/checkpoints/aggregateData.parquet'\n",
-    ")\n",
+    "agg = pd.read_parquet('../input/Dataset7(CODEX7)/CODEX7_clean_cylinter_aggregateData.parquet')\n",
     "\n",
     "# read markers.csv\n",
-    "markers = pd.read_csv('/Users/greg/Desktop/HBM524.VWGB.378/markers.csv')\n",
+    "markers = pd.read_csv('../input/Dataset7(CODEX7)/markers.csv')\n",
     "\n",
     "# log-transform columns to be used in clustering\n",
     "clustering_cols = [\n",
@@ -212,11 +201,11 @@
     "data_crop['Y_centroid'] = data_crop['Y_centroid'] - row_min\n",
     "\n",
     "# read segmentation outlines and crop\n",
-    "seg = imread('/Users/greg/Desktop/HBM524.VWGB.378/seg/HBM524.VWGB.378.ome.tif', key=0)\n",
+    "seg = imread('../input/Dataset7(CODEX7)/seg/HBM524.VWGB.378.ome.tif', key=0)\n",
     "seg_crop = seg[row_min:row_max, col_min:col_max]\n",
     "\n",
     "# read DNA1 image, crop, and convert to RGB\n",
-    "dna = imread('/Users/greg/Desktop/HBM524.VWGB.378/tif/HBM524.VWGB.378.ome.tif', key=0)\n",
+    "dna = imread('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=0)\n",
     "dna_float = img_as_float(dna)\n",
     "dna_float -= dna_float.min()\n",
     "dna_float /= dna_float.max()\n",
@@ -224,7 +213,7 @@
     "dna_crop_rgb = gray2rgb(dna_crop)\n",
     "\n",
     "# read CD3 channel of image, crop, and convert to RGB with colormap\n",
-    "cd3_raw = imread('/Users/greg/Desktop/HBM524.VWGB.378/tif/HBM524.VWGB.378.ome.tif', key=30)\n",
+    "cd3_raw = imread('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', key=30)\n",
     "cd3 = np.clip(cd3_raw, cd3_raw.min(), 9169)  # clipping to preferred intensity\n",
     "cd3_float = img_as_float(cd3)\n",
     "cd3_float -= cd3_float.min()\n",
@@ -273,7 +262,7 @@
     "cbar = plt.colorbar()\n",
     "cbar.set_alpha(1.0)\n",
     "cbar.set_label('CD3 signal', labelpad=20, rotation=90)\n",
-    "plt.savefig(os.path.join(save_dir, 'image.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'image.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -286,53 +275,54 @@
    "outputs": [],
    "source": [
     "# open CODEX image in Napari to select ROIs (if not already done) \n",
+    "viewer = napari.Viewer()\n",
+    "\n",
+    "viewer.add_image(dna_crop, opacity=1.0, rgb=False, name='DNA1')\n",
+    "\n",
+    "viewer.add_image(\n",
+    "    seg_crop, rgb=False, blending='additive', opacity=1.0, \n",
+    "    colormap='green', visible=False, name='segmentation'\n",
+    ")\n",
+    "\n",
+    "viewer.add_image(\n",
+    "    cd3_crop, rgb=False, blending='additive', colormap='magma',\n",
+    "    visible=True, name='CD3'\n",
+    ")\n",
     "\n",
     "# read saved polygon vertices (if ROIs have been drawn already) \n",
-    "if os.path.exists(os.path.join(save_dir, 'rois.yml')):\n",
+    "if os.path.exists(os.path.join(out_dir, 'rois.yml')):\n",
     "\n",
-    "    polygon_dict = yaml.safe_load(open(os.path.join(save_dir, 'rois.yml')))\n",
+    "    polygon_dict = yaml.safe_load(open(os.path.join(out_dir, 'rois.yml')))\n",
     "    \n",
     "    shapes = [polygon_dict[i][0] for i in range(0, len(polygon_dict.keys()))]\n",
     "    polygons = [polygon_dict[i][1] for i in range(0, len(polygon_dict.keys()))]\n",
     "\n",
-    "else:\n",
-    "    viewer = napari.Viewer()\n",
-    "\n",
-    "    viewer.add_image(dna_crop, opacity=1.0, rgb=False, name='DNA1')\n",
-    "\n",
-    "    viewer.add_image(\n",
-    "        seg_crop, rgb=False, blending='additive', opacity=1.0, \n",
-    "        colormap='green', visible=False, name='segmentation'\n",
-    "    )\n",
-    "\n",
-    "    viewer.add_image(\n",
-    "        cd3_crop, rgb=False, blending='additive', colormap='magma',\n",
-    "        visible=True, name='CD3'\n",
-    "    )\n",
-    "    \n",
     "    selection_layer = viewer.add_shapes(\n",
-    "        shape_type='polygon',\n",
+    "        data=polygons,\n",
+    "        shape_type=shapes,\n",
     "        ndim=2,\n",
-    "        face_color=[1.0, 1.0, 1.0, 0.2],\n",
-    "        edge_color=[0.0, 0.66, 1.0, 1.0],\n",
-    "        edge_width=10.0,\n",
-    "        name='ROI(s)'\n",
+    "        face_color=[0.0, 1.0, 0.0, 0.0],  # [1.0, 1.0, 1.0, 0.2]\n",
+    "        edge_color=[0.0, 1.0, 0.0, 1.0], # [0.0, 0.66, 1.0, 1.0]\n",
+    "        edge_width=20.0,\n",
+    "        name='ROI(s)') \n",
+    "else:\n",
+    "    selection_layer = viewer.add_shapes(\n",
+    "        shape_type='polygon', ndim=2, face_color=[1.0, 1.0, 1.0, 0.2],\n",
+    "        edge_color=[0.0, 0.66, 1.0, 1.0], edge_width=10.0, name='ROI(s)'\n",
     "    )\n",
     "    \n",
-    "    viewer.scale_bar.visible = True\n",
-    "    viewer.scale_bar.unit = 'um'\n",
-    "    \n",
-    "    napari.run()\n",
+    "viewer.scale_bar.visible = True\n",
+    "viewer.scale_bar.unit = 'um'\n",
     "\n",
-    "    # store ROIs\n",
-    "    polygon_dict = {}\n",
-    "    \n",
-    "    for e, (shape_type, roi) in enumerate(\n",
-    "            zip(selection_layer.shape_type, selection_layer.data)):\n",
-    "        polygon_dict[e] = [shape_type, roi.tolist()]\n",
+    "napari.run()\n",
+    " \n",
+    "# store ROIs\n",
+    "for e, (shape_type, roi) in enumerate(\n",
+    "        zip(selection_layer.shape_type, selection_layer.data)):\n",
+    "    polygon_dict[e] = [shape_type, roi.tolist()]\n",
     "\n",
-    "    f = open(os.path.join(save_dir, 'rois.yml'), 'w')\n",
-    "    yaml.dump(polygon_dict, f)"
+    "f = open(os.path.join(out_dir, 'rois.yml'), 'w')\n",
+    "yaml.dump(polygon_dict, f)"
    ]
   },
   {
@@ -433,7 +423,7 @@
     "\n",
     "plt.colorbar(sc)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_CD3.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_CD3.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -511,7 +501,7 @@
     "    bbox_to_anchor=[0.76, 0.99], labelspacing=0.9, frameon=False\n",
     ")\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_gate.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_gate.png'), dpi=1000)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -587,7 +577,7 @@
     "\n",
     "plt.colorbar(sc)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_CD3_noArtifacts.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_CD3_noArtifacts.png'), dpi=1000)\n",
     "plt.show()\n",
     "\n",
     "# plot colored by CD4\n",
@@ -598,7 +588,7 @@
     "\n",
     "plt.colorbar(sc)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_CD4_noArtifacts.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_CD4_noArtifacts.png'), dpi=1000)\n",
     "plt.show()\n",
     "\n",
     "# plot colored by CD8\n",
@@ -609,13 +599,13 @@
     "\n",
     "plt.colorbar(sc)\n",
     "ax.set_aspect('equal')\n",
-    "plt.savefig(os.path.join(save_dir, 'embedding_CD8_noArtifacts.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'embedding_CD8_noArtifacts.png'), dpi=1000)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "44f70689-c545-4dda-8ed5-3bee41b0fc1a",
    "metadata": {},
    "outputs": [
@@ -635,8 +625,8 @@
     "\n",
     "data_sans_rois = data_sans_rois.reset_index(drop=True)\n",
     "\n",
-    "if os.path.exists(os.path.join(save_dir, 'lassoed_cells.yml')):\n",
-    "    my_selections = yaml.safe_load(open(os.path.join(save_dir, 'lassoed_cells.yml')))\n",
+    "if os.path.exists(os.path.join(out_dir, 'lassoed_cells.yml')):\n",
+    "    my_selections = yaml.safe_load(open(os.path.join(out_dir, 'lassoed_cells.yml')))\n",
     "\n",
     "else:\n",
     "    my_selections = {}\n",
@@ -684,7 +674,7 @@
     "        my_selections[pop] = selected_vectors.to_dict(orient='records')\n",
     "\n",
     "    # save dataframes for lassoed cells\n",
-    "    f = open(os.path.join(save_dir, 'lassoed_cells.yml'), 'w')\n",
+    "    f = open(os.path.join(out_dir, 'lassoed_cells.yml'), 'w')\n",
     "    yaml.dump(my_selections, f)\n",
     "\n",
     "combo = pd.concat(\n",
@@ -717,7 +707,7 @@
     "g.ax_heatmap.set_xticklabels(g.ax_heatmap.get_xticklabels(), rotation=90, size=20)\n",
     "g.ax_heatmap.set_yticklabels(g.ax_heatmap.get_yticklabels(), rotation=0, size=20)\n",
     "plt.savefig(\n",
-    "    os.path.join(save_dir, 'channel_z-scores.pdf'), bbox_inches='tight'\n",
+    "    os.path.join(out_dir, 'channel_z-scores.pdf'), bbox_inches='tight'\n",
     ")\n",
     "plt.show()\n",
     "plt.close('all')"
@@ -747,7 +737,7 @@
     "        channel_number = markers.index[markers['marker_name'] == ch].item()\n",
     "\n",
     "        img = imread(\n",
-    "            '/Users/greg/Desktop/HBM524.VWGB.378/tif/HBM524.VWGB.378.ome.tif',\n",
+    "            '../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif',\n",
     "            key=channel_number\n",
     "        )\n",
     "        \n",
