--- a/src/Fig1l.ipynb
+++ b/src/Fig1l.ipynb
@@ -10,10 +10,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import napari\n",
-    "from tifffile import imread\n",
-    "# import pygetwindow\n",
-    "# import pyautogui\n",
-    "# from PIL import Image"
+    "from tifffile import imread"
    ]
   },
   {
@@ -34,54 +31,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = (\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/' +\n",
-    "    'alignment_artifact'\n",
-    "    )\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
-    "\n",
-    "markers = pd.read_csv(\n",
-    "    '/Volumes/My Book/cylinter_input/emit22_full/markers.csv'\n",
-    "    )\n",
+    "markers = pd.read_csv('../input/Dataset3(TMA)/markers.csv')\n",
     "\n",
     "# read DNA1 channel\n",
-    "dna = imread(\n",
-    "    f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif',\n",
-    "    key=0\n",
-    "    )\n",
+    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "\n",
-    "pcreb_channel_number = markers['channel_number'][\n",
-    "            markers['marker_name'] == 'pCREB']\n",
+    "pcreb_channel_number = markers['channel_number'][markers['marker_name'] == 'pCREB']\n",
     "pcreb = imread(\n",
-    "    f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif',\n",
+    "    f'../input/Dataset3(TMA)/tif/{core}.ome.tif',\n",
     "    key=pcreb_channel_number.item() - 1\n",
     "    )\n",
     "\n",
-    "ccnb1_channel_number = markers['channel_number'][\n",
-    "            markers['marker_name'] == 'CCNB1']\n",
-    "ccnb1 = imread(\n",
-    "    f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif',\n",
-    "    key=ccnb1_channel_number.item() - 1\n",
-    "    )\n",
-    "\n",
-    "ccne_channel_number = markers['channel_number'][\n",
-    "            markers['marker_name'] == 'CCNE']\n",
-    "ccne = imread(\n",
-    "    f'/Volumes/My Book/cylinter_input/emit22_full/tif/{core}.ome.tif',\n",
-    "    key=ccne_channel_number.item() - 1\n",
-    "    )\n",
-    "\n",
     "# read segmentation outlines\n",
-    "seg = imread(\n",
-    "    f'/Volumes/My Book/cylinter_input/emit22_full/seg/{core}.ome.tif',\n",
-    "    key=0\n",
-    "    )\n",
+    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "\n",
-    "\n",
-    "viewer = napari.view_image(\n",
-    "    dna, rgb=False, name=dna1\n",
-    "    )\n",
+    "viewer = napari.view_image(dna, rgb=False, name=dna1)\n",
     "\n",
     "viewer.add_image(\n",
     "    seg, rgb=False, blending='additive',\n",
@@ -91,27 +55,11 @@
     "\n",
     "viewer.add_image(\n",
     "    pcreb, rgb=False, blending='additive',\n",
-    "    opacity=1.0, colormap='green', visible=False,\n",
+    "    opacity=1.0, colormap='green', visible=True,\n",
     "    name='pCREB'\n",
     "    )\n",
     "\n",
-    "viewer.add_image(\n",
-    "    ccnb1, rgb=False, blending='additive',\n",
-    "    opacity=1.0, colormap='green', visible=False,\n",
-    "    name='CCNB1'\n",
-    "    )\n",
-    "\n",
-    "viewer.add_image(\n",
-    "    ccne, rgb=False, blending='additive',\n",
-    "    opacity=1.0, colormap='green', visible=False,\n",
-    "    name='CCNE'\n",
-    "    )\n",
-    "\n",
-    "napari.run()\n",
-    "\n",
-    "file = open(os.path.join(save_dir, 'check_desktop.txt'), 'w')\n",
-    "file.write('Check for screen shot on desktop.')\n",
-    "file.close()"
+    "napari.run()"
    ]
   }
  ],
