--- a/src/Fig2o-ExtFig2j.ipynb
+++ b/src/Fig2o-ExtFig2j.ipynb
@@ -12,7 +12,7 @@
     "# CD45 = [1302.5, 20351.0]\n",
     "# CD45RO = [1563.046, 46105.0]\n",
     "\n",
-    "# replace code for image contrast in CyLinter\n",
+    "# replace code for image contrast in CyLinter working on CRC image\n",
     "# starting on line 6512 with this\n",
     "cd4_dict = {0: [2049.0, 11998.0],\n",
     "            1: [2749.0, 5998.0],\n",
