--- a/src/Fig3e.ipynb
+++ b/src/Fig3e.ipynb
@@ -19,18 +19,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = (\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/'\n",
-    "    'last_minute_figures/topacio_cluster_groups'\n",
-    "    )\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig3e'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_parquet(\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/' +\n",
-    "    'output_raw/checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "\n",
+    "df = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet')\n",
     "coi = [-1]"
    ]
   },
@@ -78,7 +72,7 @@
     "    test = df[df['cluster_2d'].isin(cluster_group)]\n",
     "    plt.scatter(test['emb1'], test['emb2'], c=c, s=0.05, linewidth=0.0)\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'by_channels_heatmap.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'by_channels_heatmap.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -139,7 +133,7 @@
     "    test = df[df['cluster_2d'].isin(cluster_group)]\n",
     "    plt.scatter(test['emb1'], test['emb2'], c=c, s=0.05, linewidth=0.0)\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'by_clusters_heatmap.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'by_clusters_heatmap.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
