--- a/src/Fig4i.ipynb
+++ b/src/Fig4i.ipynb
@@ -51,13 +51,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/bright_nuclei'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig4i'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "data = pd.read_parquet(\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/' +\n",
-    "    'output_orig/checkpoints/aggregateData.parquet')\n",
+    "    '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_aggregateData.parquet'\n",
+    ")\n",
     "\n",
     "dna = imread(f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{tissue}.ome.tif', key=0)\n",
     "\n",
@@ -117,7 +118,7 @@
     "plt.title(f'Sample {tissue}')\n",
     "plt.xlabel('log10(DNA1)')\n",
     "plt.ylabel('cell count')\n",
-    "plt.savefig(os.path.join(save_dir, 'gated_hist.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'gated_hist.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -183,10 +184,10 @@
     "    gated_centroids['Y_centroid'], s=4.5, lw=0.0, color='lime'\n",
     "    )\n",
     "plt.title(f'Sample {tissue}')\n",
-    "plt.savefig(os.path.join(save_dir, 'bright_nuclei_large.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'bright_nuclei_large.png'), dpi=1000)\n",
     "\n",
     "# save as a pdf, too\n",
-    "plt.savefig(os.path.join(save_dir, 'bright_nuclei_large.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'bright_nuclei_large.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -258,10 +259,10 @@
     "    gated_centroids['Y_centroid'], s=6.5, lw=0.0, color='lime'\n",
     "    )\n",
     "plt.title(f'Sample {tissue}')\n",
-    "plt.savefig(os.path.join(save_dir, 'bright_nuclei_small.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'bright_nuclei_small.png'), dpi=1000)\n",
     "\n",
     "# save as a pdf, too\n",
-    "plt.savefig(os.path.join(save_dir, 'bright_nuclei_small.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'bright_nuclei_small.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
