--- a/src/Fig4j.ipynb
+++ b/src/Fig4j.ipynb
@@ -53,12 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/over-segmentation'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig4j'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet('/Volumes/My Book/cylinter_input/sardana-097/output/checkpoints/aggregateData.parquet')\n",
+    "data = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_clean_cylinter_aggregateData.parquet')\n",
     "\n",
     "# crop\n",
     "ymin = 10440\n",
@@ -86,17 +87,11 @@
    ],
    "source": [
     "# read DNA1 image of selected tissue and crop to target size\n",
-    "dna = imread(\n",
-    "    '/Volumes/My Book/cylinter_input/sardana-097/' +\n",
-    "    f'tif/{tissue}.ome.tif', key=0\n",
-    "    )\n",
+    "dna = imread(f'../input/Dataset2(CRC)/tif/{tissue}.ome.tif', key=0)\n",
     "dna_crop = dna[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read segmentation outlines for target tissue sample and crop ROI\n",
-    "seg = imread(\n",
-    "    '/Volumes/My Book/cylinter_input/sardana-097/' +\n",
-    "    f'seg/{tissue}.ome.tif', key=0\n",
-    "    )\n",
+    "seg = imread(f'../input/Dataset2(CRC)/seg/{tissue}.ome.tif', key=0)\n",
     "seg_crop = seg[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# plot histogram\n",
@@ -107,7 +102,7 @@
     "plt.title(f'Sample {tissue}')\n",
     "plt.xlabel('log10(Area)')\n",
     "plt.ylabel('cell count')\n",
-    "plt.savefig(os.path.join(save_dir, 'gated_hist.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'gated_hist.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -180,10 +175,10 @@
     "    )\n",
     "\n",
     "plt.title(f'Sample {tissue}')\n",
-    "plt.savefig(os.path.join(save_dir, 'sardana.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'sardana.png'), dpi=1000)\n",
     "\n",
     "# save as a pdf, too\n",
-    "plt.savefig(os.path.join(save_dir, 'sardana.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'sardana.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
