--- a/src/Fig4k.ipynb
+++ b/src/Fig4k.ipynb
@@ -53,15 +53,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/under-segmentation'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig4k'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# read unfiltered single-cell data\n",
-    "data = pd.read_parquet(\n",
-    "    '/Volumes/My Book/cylinter_input/emit22_full/output/' +\n",
-    "    'checkpoints/aggregateData.parquet'\n",
-    "    )\n",
+    "data = pd.read_parquet('../input/Dataset3(TMA)/TMA_clean_cylinter_aggregateData.parquet')\n",
     "data = data[data['Sample'] == core]"
    ]
   },
@@ -90,17 +88,11 @@
     "xmax = 2185\n",
     "\n",
     "# read DNA1 image of selected core and crop to target size\n",
-    "dna = imread(\n",
-    "    '/Volumes/My Book/cylinter_input/emit22_full/' +\n",
-    "    f'tif/{core}.ome.tif', key=0\n",
-    "    )\n",
+    "dna = imread(f'../input/Dataset3(TMA)/tif/{core}.ome.tif', key=0)\n",
     "dna_crop = dna[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# read segmentation outlines for target core sample and crop ROI\n",
-    "seg = imread(\n",
-    "    '/Volumes/My Book/cylinter_input/emit22_full/' +\n",
-    "    f'seg/{core}.ome.tif', key=0\n",
-    "    )\n",
+    "seg = imread(f'../input/Dataset3(TMA)/seg/{core}.ome.tif', key=0)\n",
     "seg_crop = seg[ymin:ymax, xmin:xmax]\n",
     "\n",
     "# plot histogram\n",
@@ -112,7 +104,7 @@
     "plt.title(f'Sample {core}')\n",
     "plt.xlabel('log10(Area)')\n",
     "plt.ylabel('cell count')\n",
-    "plt.savefig(os.path.join(save_dir, 'gated_hist.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'gated_hist.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -184,10 +176,10 @@
     "    )\n",
     "\n",
     "plt.title(f'Sample {core}')\n",
-    "plt.savefig(os.path.join(save_dir, f'{core}.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, f'{core}.png'), dpi=1000)\n",
     "\n",
     "# save as a pdf, too\n",
-    "plt.savefig(os.path.join(save_dir, f'{core}.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, f'{core}.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
