--- a/src/Fig4m.ipynb
+++ b/src/Fig4m.ipynb
@@ -85,19 +85,19 @@
     }
    ],
    "source": [
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/outliers'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig4m'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# read TOPACIO single-cell data BEFORE pruning outliers\n",
     "data = pd.read_parquet(\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/output_orig/'\n",
-    "    'checkpoints/selectROIs.parquet'\n",
-    "    )\n",
+    "    '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_selectROIs.parquet'\n",
+    ")\n",
     "data = data[data['Sample'] == sample].copy()\n",
     "\n",
     "# isolate immunomarker channels\n",
-    "markers = pd.read_csv('/Volumes/My Book/cylinter_input/topacio/markers.csv')\n",
+    "markers = pd.read_csv('../input/Dataset1(TOPACIO)/markers.csv')\n",
     "exclude = ['antiRat', 'antiRabbit', 'antiGoat', 'pSTAT1', 'Ki67', 'STING', 'pTBK1', 'pSTAT3', 'PCNA', 'HLAA', 'cPARP']\n",
     "include = [i for i in data.columns if 'DNA' not in i if i not in exclude if i in list(markers['marker_name'])]\n",
     "\n",
@@ -115,8 +115,8 @@
     "plt.title(f'Before pruning')\n",
     "plt.xlabel(f'log10({channel})')\n",
     "plt.ylabel('Segmentation area')\n",
-    "plt.savefig(os.path.join(save_dir, 'before_pruning.png'), dpi=1000)\n",
-    "plt.savefig(os.path.join(save_dir, 'before_pruning.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'before_pruning.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'before_pruning.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')\n",
     "\n",
@@ -141,8 +141,8 @@
     "plt.title(f'After pruning')\n",
     "plt.xlabel(f'log10({channel})')\n",
     "plt.ylabel('Segmentation Area')\n",
-    "plt.savefig(os.path.join(save_dir, 'after_pruning.png'), dpi=1000)\n",
-    "plt.savefig(os.path.join(save_dir, 'after_pruning.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'after_pruning.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'after_pruning.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -172,45 +172,8 @@
     }
    ],
    "source": [
-    "img_path = (f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{sample}.ome.tif')\n",
-    "seg_path = (f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/seg/{sample}.ome.tif')\n",
-    "\n",
-    "dna = single_channel_pyramid(img_path, channel=0)\n",
-    "seg = single_channel_pyramid(seg_path, channel=0)\n",
-    "cd8a = single_channel_pyramid(img_path, channel=13)\n",
-    "\n",
-    "# view images in Napari\n",
-    "# viewer = napari.view_image(dna, opacity=0.5, rgb=False, name='DNA1')\n",
-    "\n",
-    "# viewer.add_image(\n",
-    "#     seg, rgb=False, blending='opaque', opacity=0.2,\n",
-    "#     colormap='gray', visible=False, name='segmentation'\n",
-    "#     )\n",
-    "\n",
-    "# viewer.add_image(\n",
-    "#     cd8a, rgb=False, blending='additive',\n",
-    "#     colormap='bop blue', visible=True, name='CD8a'\n",
-    "#     )\n",
-    "\n",
-    "# viewer.add_points(\n",
-    "#     cd8_top_centroids, name='CD8T_top',\n",
-    "#     face_color='lime',  # #ffaa00\n",
-    "#     edge_width=0.0, size=5.0)\n",
-    "\n",
-    "# viewer.add_points(\n",
-    "#     cd8_bottom_centroids, name='CD8T_bottom',\n",
-    "#     face_color='red',\n",
-    "#     edge_width=0.0, size=5.0)\n",
-    "\n",
-    "\n",
-    "# viewer.add_points(\n",
-    "#     other_centroids, name='other',\n",
-    "#     face_color='gainsboro',\n",
-    "#     edge_width=0.0, size=5.0)\n",
-    "\n",
-    "# viewer.layers['CD8a'].contrast_limits = (0, 8000)\n",
-    "\n",
-    "# napari.run()\n",
+    "img_path = f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{sample}.ome.tif'\n",
+    "seg_path = f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/seg/{sample}.ome.tif'\n",
     "\n",
     "# crop image\n",
     "ymin = 15475\n",
@@ -290,10 +253,10 @@
     "    )\n",
     "\n",
     "# isolate data for cells within crop bounds\n",
-    "other_crop = other[['Y_centroid', 'X_centroid', 'DNA1']][\n",
-    "    (other['X_centroid'].between(xmin, xmax, inclusive='both')) &\n",
-    "    (other['Y_centroid'].between(ymin, ymax, inclusive='both'))\n",
-    "    ]\n",
+    "# other_crop = other[['Y_centroid', 'X_centroid', 'DNA1']][\n",
+    "#     (other['X_centroid'].between(xmin, xmax, inclusive='both')) &\n",
+    "#     (other['Y_centroid'].between(ymin, ymax, inclusive='both'))\n",
+    "#     ]\n",
     "\n",
     "# transform x, y coordinates of cells within ROI bounds\n",
     "# other_crop['X_centroid'] = other_crop['X_centroid']-xmin\n",
@@ -307,8 +270,8 @@
     "#     )\n",
     "\n",
     "plt.title(f'Sample {sample}')\n",
-    "plt.savefig(os.path.join(save_dir, 'image.png'), dpi=1000)\n",
-    "plt.savefig(os.path.join(save_dir, 'image.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'image.png'), dpi=1000)\n",
+    "plt.savefig(os.path.join(out_dir, 'image.pdf'))\n",
     "plt.show()"
    ]
   }
