--- a/src/Fig5h-j.ipynb
+++ b/src/Fig5h-j.ipynb
@@ -22,25 +22,81 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "0d89eea5-a2fd-4315-9ed2-ce82c2906293",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def single_channel_pyramid(tiff_path, channel):\n",
+    "    tiff = tifffile.TiffFile(tiff_path)\n",
+    "\n",
+    "    if 'Faas' not in tiff.pages[0].software:\n",
+    "\n",
+    "        if len(tiff.series[0].levels) > 1:\n",
+    "\n",
+    "            pyramid = [\n",
+    "                zarr.open(s[channel].aszarr()) for s in tiff.series[0].levels\n",
+    "            ]\n",
+    "\n",
+    "            pyramid = [da.from_zarr(z) for z in pyramid]\n",
+    "\n",
+    "            min_val = pyramid[0].min()\n",
+    "            max_val = pyramid[0].max()\n",
+    "            vmin, vmax = da.compute(min_val, max_val)\n",
+    "\n",
+    "        else:\n",
+    "\n",
+    "            img = tiff.pages[channel].asarray()\n",
+    "\n",
+    "            pyramid = [img[::4**i, ::4**i] for i in range(4)]\n",
+    "\n",
+    "            pyramid = [da.from_array(z) for z in pyramid]\n",
+    "\n",
+    "            min_val = pyramid[0].min()\n",
+    "            max_val = pyramid[0].max()\n",
+    "            vmin, vmax = da.compute(min_val, max_val)\n",
+    "\n",
+    "        return pyramid, vmin, vmax\n",
+    "\n",
+    "    else:  # support legacy OME-TIFF format\n",
+    "\n",
+    "        if len(tiff.series) > 1:\n",
+    "\n",
+    "            pyramid = [zarr.open(s[channel].aszarr()) for s in tiff.series]\n",
+    "\n",
+    "            pyramid = [da.from_zarr(z) for z in pyramid]\n",
+    "\n",
+    "            min_val = pyramid[0].min()\n",
+    "            max_val = pyramid[0].max()\n",
+    "            vmin, vmax = da.compute(min_val, max_val)\n",
+    "\n",
+    "        else:\n",
+    "            img = tiff.pages[channel].asarray()\n",
+    "\n",
+    "            pyramid = [img[::4**i, ::4**i] for i in range(4)]\n",
+    "\n",
+    "            pyramid = [da.from_array(z) for z in pyramid]\n",
+    "\n",
+    "            min_val = pyramid[0].min()\n",
+    "            max_val = pyramid[0].max()\n",
+    "            vmin, vmax = da.compute(min_val, max_val)\n",
+    "\n",
+    "        return pyramid, vmin, vmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "cc28009f-e67f-4cfb-950e-cb447d851898",
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = os.path.join(\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/last_minute_figures/'\n",
-    "    'CRCpre_vs_CRCpost_matrix'\n",
-    ")\n",
+    "# output dir\n",
+    "out_dir = '../output/Fig5h-j'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
-    "if not os.path.exists(out):\n",
-    "    os.makedirs(out)\n",
-    "\n",
-    "pre = pd.read_parquet(\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/output_raw/checkpoints/clustering.parquet'\n",
-    ")\n",
-    "\n",
-    "post = pd.read_parquet(\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/output/checkpoints/clustering.parquet'\n",
-    ")\n",
+    "pre = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet')\n",
+    "post = pd.read_parquet('../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet')\n",
     "\n",
     "pre = pre[pre['cluster_2d'] != -1]\n",
     "post = post[post['cluster_2d'] != -1]"
@@ -48,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3406a212-fc25-4984-a350-06b8cab91eed",
    "metadata": {},
    "outputs": [],
@@ -67,12 +123,12 @@
     "        sorted(post['cluster_2d'].unique())).fillna(0)\n",
     "\n",
     "    heatmap[name[0]] = clean_cluster_pad\n",
-    "heatmap.to_csv(os.path.join(out, 'heatmap.csv'))"
+    "heatmap.to_csv(os.path.join(out_dir, 'heatmap.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "5c9ac2b4-1044-4b73-9537-977772deb59e",
    "metadata": {},
    "outputs": [
@@ -127,16 +183,15 @@
     "g.ax_heatmap.set_xticklabels(g.ax_heatmap.get_xmajorticklabels(), fontsize=7.5, rotation=0)\n",
     "g.ax_heatmap.set_yticklabels(g.ax_heatmap.get_ymajorticklabels(), fontsize=7.5)\n",
     "\n",
-    "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(out, 'pre-CRC_by_post_CRC.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'pre-CRC_by_post_CRC.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "078c2e84-c346-4af3-b1c8-a79db1e69ae1",
    "metadata": {},
    "outputs": [
@@ -159,13 +214,13 @@
     ")\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "plt.savefig(os.path.join(out, 'UMAP1.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'UMAP1.png'), dpi=800)\n",
     "plt.close('all')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fcba2dc3-2dba-4daa-808c-e443b13f101f",
    "metadata": {},
    "outputs": [
@@ -241,73 +296,9 @@
     "    s=0.9, c='tab:cyan'\n",
     ")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(out, 'UMAP2.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'UMAP2.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ac862c5d-81f6-430b-81ee-9f95b925baca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def single_channel_pyramid(tiff_path, channel):\n",
-    "    tiff = tifffile.TiffFile(tiff_path)\n",
-    "\n",
-    "    if 'Faas' not in tiff.pages[0].software:\n",
-    "\n",
-    "        if len(tiff.series[0].levels) > 1:\n",
-    "\n",
-    "            pyramid = [\n",
-    "                zarr.open(s[channel].aszarr()) for s in tiff.series[0].levels\n",
-    "            ]\n",
-    "\n",
-    "            pyramid = [da.from_zarr(z) for z in pyramid]\n",
-    "\n",
-    "            min_val = pyramid[0].min()\n",
-    "            max_val = pyramid[0].max()\n",
-    "            vmin, vmax = da.compute(min_val, max_val)\n",
-    "\n",
-    "        else:\n",
-    "\n",
-    "            img = tiff.pages[channel].asarray()\n",
-    "\n",
-    "            pyramid = [img[::4**i, ::4**i] for i in range(4)]\n",
-    "\n",
-    "            pyramid = [da.from_array(z) for z in pyramid]\n",
-    "\n",
-    "            min_val = pyramid[0].min()\n",
-    "            max_val = pyramid[0].max()\n",
-    "            vmin, vmax = da.compute(min_val, max_val)\n",
-    "\n",
-    "        return pyramid, vmin, vmax\n",
-    "\n",
-    "    else:  # support legacy OME-TIFF format\n",
-    "\n",
-    "        if len(tiff.series) > 1:\n",
-    "\n",
-    "            pyramid = [zarr.open(s[channel].aszarr()) for s in tiff.series]\n",
-    "\n",
-    "            pyramid = [da.from_zarr(z) for z in pyramid]\n",
-    "\n",
-    "            min_val = pyramid[0].min()\n",
-    "            max_val = pyramid[0].max()\n",
-    "            vmin, vmax = da.compute(min_val, max_val)\n",
-    "\n",
-    "        else:\n",
-    "            img = tiff.pages[channel].asarray()\n",
-    "\n",
-    "            pyramid = [img[::4**i, ::4**i] for i in range(4)]\n",
-    "\n",
-    "            pyramid = [da.from_array(z) for z in pyramid]\n",
-    "\n",
-    "            min_val = pyramid[0].min()\n",
-    "            max_val = pyramid[0].max()\n",
-    "            vmin, vmax = da.compute(min_val, max_val)\n",
-    "\n",
-    "        return pyramid, vmin, vmax"
    ]
   },
   {
@@ -315,21 +306,10 @@
    "execution_count": 8,
    "id": "9f7e84c2-fcca-4e77-b961-9ddc3407635e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Image layer 'DNA1' at 0x14d30f810>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add DNA1 channel to Napari image viewer\n",
-    "dna_path = '/Volumes/T7 Shield/cylinter_input/sardana-097/tif/WD-76845-097.ome.tif'\n",
+    "dna_path = '../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif'\n",
     "\n",
     "viewer = napari.Viewer()\n",
     "\n",
@@ -337,42 +317,15 @@
     "viewer.add_image(\n",
     "    dna, rgb=False, blending='additive', colormap='gray', visible=True,\n",
     "    opacity=1.0, name='DNA1', contrast_limits=(min, max)\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "06a9c09a-d089-46fb-b8eb-c61a7c0b4b0c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Points layer 'Pre-QC cluster 6' at 0x152cc4890>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    ")\n",
+    "\n",
     "# Add centroids of pre-QC cluster 6\n",
     "centroids = pre[['Y_centroid', 'X_centroid']]\n",
     "viewer.add_points(\n",
     "    centroids, name='Pre-QC cluster 6', face_color='white', edge_color='white', size=80.0,\n",
     "    opacity=1.0, blending='translucent', visible=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "4e5ebd20-ad5f-4d04-b6eb-9bbdb8cca3b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "# Add centroids of cells from post-QC CRC clusters in pre-QC cluster 6\n",
     "color_dict = {58: '#1f77b4', 62: '#ff7f0e', 53: '#2ca02c', 56: '#d62728', 59: '#9467bd',\n",
     "              51: '#bcbd22',54: '#8c564b',72: '#17becf', 9: '#e377c2' \n",
@@ -383,16 +336,8 @@
     "    viewer.add_points(\n",
     "        centroids, name=cluster, face_color=c, edge_color=c, size=70.0,\n",
     "        opacity=1.0, blending='translucent', visible=True\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b15202cd-0abc-47f6-8c8f-bb262fcefaa1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    )\n",
+    "\n",
     "# Run Napari image viewer\n",
     "viewer.scale_bar.visible = True\n",
     "viewer.scale_bar.unit = 'um'\n",
