--- a/src/Fig5l.ipynb
+++ b/src/Fig5l.ipynb
@@ -99,24 +99,13 @@
     "\n",
     "clusters_to_show = [13]\n",
     "\n",
-    "cylinter_input_path = (\n",
-    "    '/Volumes/My Book/cylinter_input/sardana-097/'\n",
-    "    )\n",
+    "cylinter_input_path = '../input/Dataset2(CRC)'\n",
+    "sc_data_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet'\n",
+    "markers_path = '../input/Dataset2(CRC)/markers.csv'\n",
+    "image_contrast_path = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_contrast_limits.yml'\n",
     "\n",
-    "sc_data_path = os.path.join(\n",
-    "    cylinter_input_path, 'output/checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "\n",
-    "cylinter_config_path = os.path.join(cylinter_input_path, 'config.yml')\n",
-    "\n",
-    "markers_path = os.path.join(cylinter_input_path, 'markers.csv')\n",
-    "\n",
-    "image_contrast_path = os.path.join(\n",
-    "    cylinter_input_path, 'output/contrast/contrast_limits.yml'\n",
-    "    )\n",
-    "\n",
-    "tif_path = cylinter_input_path + f'tif/{sample_name}.ome.tif'\n",
-    "seg_path = cylinter_input_path + f'seg/{sample_name}.ome.tif'\n",
+    "tif_path = f'../input/Dataset2(CRC)/tif/{sample_name}.ome.tif'\n",
+    "seg_path = f'../input/Dataset2(CRC)/seg/{sample_name}.ome.tif'\n",
     "\n",
     "# import clustered single-cell data\n",
     "data = pd.read_parquet(sc_data_path)\n",
@@ -130,11 +119,6 @@
     "# select data from sample of interest\n",
     "data = data[data['Sample'] == sample_name]\n",
     "\n",
-    "# import config.yml\n",
-    "with open(cylinter_config_path) as f:\n",
-    "    config = yaml.safe_load(f)\n",
-    "markers_to_exclude = config['channelExclusionsClustering']\n",
-    "\n",
     "# import markers.csv\n",
     "markers = pd.read_csv(markers_path)\n",
     "\n",
@@ -145,7 +129,7 @@
     "# isolate antibodies of interest\n",
     "abx_channels = [\n",
     "    i for i in data.columns if i in list(markers['marker_name'])\n",
-    "    if dna_moniker not in i if i not in markers_to_exclude]\n",
+    "    if dna_moniker not in i]\n",
     "\n",
     "# import image contrast settings\n",
     "with open(image_contrast_path) as f:\n",
@@ -160,9 +144,7 @@
    "outputs": [],
    "source": [
     "# read DNA1 channel\n",
-    "dna, min, max = single_channel_pyramid(\n",
-    "    glob.glob(tif_path)[0], channel=0\n",
-    "    )\n",
+    "dna, min, max = single_channel_pyramid(glob.glob(tif_path)[0], channel=0)\n",
     "\n",
     "# add DNA1 channel to Napari image viewer\n",
     "viewer = napari.view_image(\n",
@@ -192,8 +174,7 @@
     "        contrast_limits[ch][0], contrast_limits[ch][1])\n",
     "\n",
     "# add centroids of cells for each cluster to Napari image viewer\n",
-    "\n",
-    "for cluster in sorted(clusters_to_show, reverse=True):  # data[cluster_col].unique()\n",
+    "for cluster in sorted(clusters_to_show, reverse=True):\n",
     "    centroids = data[\n",
     "        ['Y_centroid', 'X_centroid']][data[cluster_col] == cluster]\n",
     "    viewer.add_points(\n",
@@ -216,7 +197,7 @@
     "    )\n",
     "\n",
     "viewer.scale_bar.visible = True\n",
-    "viewer.scale_bar.unit = \"um\"\n",
+    "viewer.scale_bar.unit = 'um'\n",
     "\n",
     "# run Napari image viewer\n",
     "napari.run()"
