--- a/src/Fig6j.ipynb
+++ b/src/Fig6j.ipynb
@@ -20,26 +20,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = (\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/last_minute_figures'\n",
-    "    '/cluster_redistribution'\n",
-    ")\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig6j'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
-    "raw = pd.read_parquet(\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/' +\n",
-    "    'output_raw/checkpoints/clustering.parquet'\n",
-    ")\n",
-    "\n",
-    "clean = pd.read_parquet(\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/' +\n",
-    "    'output_orig/checkpoints/clustering.parquet'\n",
-    ")\n",
+    "raw = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet')\n",
+    "clean = pd.read_parquet('../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet')\n",
     "\n",
     "clean['handle'] = clean['Sample'] + '_' + clean['CellID'].astype(str)\n",
     "\n",
-    "cois = [415, 404, 174, 272]  # 424 "
+    "cois = [415, 404, 174, 272]"
    ]
   },
   {
@@ -60,7 +51,6 @@
     }
    ],
    "source": [
-    "# fig, axs = plt.subplots(1, 2)\n",
     "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 6))\n",
     "\n",
     "# pre-QC\n",
@@ -91,7 +81,7 @@
     "plt.legend(prop=font, bbox_to_anchor=[1.18, 1.01], markerscale=10)\n",
     "plt.tight_layout()\n",
     "\n",
-    "plt.savefig(os.path.join(save_dir, 'cluster_redist.png'), dpi=800)\n",
+    "plt.savefig(os.path.join(out_dir, 'cluster_redist.png'), dpi=800)\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
