--- a/src/OnlineSupFig1a.ipynb
+++ b/src/OnlineSupFig1a.ipynb
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "# output dir\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/bunching_artifacts_sup'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)"
+    "out_dir = '../output/OnlineSupFig1a'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)"
    ]
   },
   {
@@ -184,8 +184,8 @@
     "    \n",
     "    k2 = k.split('-')[0]\n",
     "    \n",
-    "    # assign file path to TOPACIO OME-TIFF (THIS IMAGE IS NOT BACKGROUND SUBTRACTED)\n",
-    "    img_path = (f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{k2}.ome.tif')\n",
+    "    # assign file path to TOPACIO OME-TIFF\n",
+    "    img_path = f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{k2}.ome.tif'\n",
     "    \n",
     "    dna = imread(img_path, key=0)\n",
     "    dna = img_as_float(dna)\n",
@@ -201,7 +201,7 @@
     "    \n",
     "    plt.imshow(dna_crop_rgb, cmap='magma')\n",
     "    plt.title(k)\n",
-    "    plt.savefig(os.path.join(save_dir, f'{k}.png'), dpi=1000)\n",
+    "    plt.savefig(os.path.join(out_dir, f'{k}.png'), dpi=1000)\n",
     "    plt.show()\n",
     "    plt.close('all')"
    ]
