--- a/src/SupFig2a,g.ipynb
+++ b/src/SupFig2a,g.ipynb
@@ -23,29 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = (\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/last_minute_figures'\n",
-    "    '/ridgeplots')\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "out_dir = '../output/SupFig2a,g'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
     "# paths to datasets\n",
-    "sardana_raw = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/'\n",
-    "    'output_raw/checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "sardana_clean = (\n",
-    "    '/Volumes/T7 Shield/cylinter_input/sardana-097/'\n",
-    "    'output/checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "topacio_raw = (\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/'\n",
-    "    'output_raw/checkpoints/clustering.parquet'\n",
-    "    )\n",
-    "topacio_clean = (\n",
-    "    '/Users/greg/Dropbox (HMS)/topacio/cylinter_output/TOPACIO_FINAL/'\n",
-    "    'output_orig/checkpoints/clustering.parquet'\n",
-    "    )\n",
+    "sardana_raw = '../input/Dataset2(CRC)/CRC-097_raw_cylinter_clustering.parquet'\n",
+    "sardana_clean = '../input/Dataset2(CRC)/CRC-097_clean_cylinter_clustering.parquet'\n",
+    "\n",
+    "topacio_raw = '../input/Dataset1(TOPACIO)/TOPACIO_raw_cylinter_clustering.parquet'\n",
+    "topacio_clean = '../input/Dataset1(TOPACIO)/TOPACIO_clean_cylinter_clustering.parquet'\n",
+    "\n",
     "paths = {\n",
     "    'CRC_raw': sardana_raw, 'CRC_clean': sardana_clean,\n",
     "    'TNBC_raw': topacio_raw, 'TNBC_clean': topacio_clean\n",
@@ -100,7 +88,7 @@
     }
    ],
    "source": [
-    "plt.rcParams['font.family'] = \"Arial\"\n",
+    "plt.rcParams['font.family'] = 'Arial'\n",
     "for name, path in paths.items():\n",
     "\n",
     "    if 'CRC' in name:\n",
@@ -177,7 +165,7 @@
     "\n",
     "    fig.text(0.01, 0.98, name, fontsize=10)\n",
     "    \n",
-    "    plt.savefig(os.path.join(save_dir, f'{name}.pdf'))\n",
+    "    plt.savefig(os.path.join(out_dir, f'{name}.pdf'))\n",
     "    plt.show()\n",
     "    plt.close('all')"
    ]
