--- a/src/SupTable1.ipynb
+++ b/src/SupTable1.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import numpy as np\n",
     "from tifffile import imread\n",
     "import matplotlib.pyplot as plt\n",
@@ -20,17 +21,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# out dir\n",
+    "out_dir = '../output/SupTable1'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
+    "\n",
     "paths = {\n",
-    "    \n",
     "    'topacio70':('/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/840047_0070.ome.tif', 1000),\n",
     "    'topacio128':('/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/840153_0128.ome.tif', 600),\n",
-    "    'sardana':('/Volumes/T7 Shield/cylinter_input/sardana-097/tif/WD-76845-097.ome.tif', 1000),\n",
-    "    'LI_codex1':('/Users/greg/Desktop/HBM946.GRVG.379/tif/HBM946.GRVG.379.ome.tif', 200),\n",
-    "    'LI_codex2':('/Users/greg/Desktop/HBM524.VWGB.378/tif/HBM524.VWGB.378.ome.tif', 100),\n",
-    "    'HNSCC_codex1':('/Volumes/My Book/cylinter_input/CODEX/tif/sample_1.ome.tif', 200),\n",
-    "    'HNSCC_codex2':('/Volumes/My Book/cylinter_input/CODEX/tif/sample_2.ome.tif', 1300),\n",
-    "    'emit':('/Volumes/My Book/T7_overflow/cylinter_input/emit22_full/tif/1.ome.tif', 200),\n",
-    "    'mihc': ('/Volumes/My Book/cylinter_input/mIHC/tif/sample_1.ome.tif', 30),\n",
+    "    'sardana':('../input/Dataset2(CRC)/tif/WD-76845-097.ome.tif', 1000),\n",
+    "    'LI_codex1':('../input/Dataset6(CODEX6)/tif/HBM946.GRVG.379.ome.tif', 200),\n",
+    "    'LI_codex2':('../input/Dataset7(CODEX7)/tif/HBM524.VWGB.378.ome.tif', 100),\n",
+    "    'HNSCC_codex1':('../input/Dataset4(CODEX4)/tif/sample_1.ome.tif', 200),\n",
+    "    'HNSCC_codex2':('../input/Dataset4(CODEX4)/tif/sample_2.ome.tif', 1300),\n",
+    "    'emit':('../input/Dataset3(TMA)/tif/1.ome.tif', 200),\n",
+    "    'mihc': ('../input/Dataset5(mIHC)/tif/sample_1.ome.tif', 30),\n",
     "}"
    ]
   },
@@ -211,6 +216,7 @@
     "    im = imread(path, key=0)\n",
     "    binary = (im > cutoff).astype(int)\n",
     "    plt.imshow(binary)\n",
+    "    plt.savefig(os.path.join(out_dir, f'{name}.png'), dpi=800)\n",
     "    plt.show()\n",
     "    pixel_size = round(ome.images[0].pixels.physical_size_x, 2)\n",
     "    if name in ['LI_codex1', 'LI_codex2']:\n",
