--- a/src/Fig1f-OnlineSupFig1c.ipynb
+++ b/src/Fig1f-OnlineSupFig1c.ipynb
@@ -29,7 +29,6 @@
     "bubbles['840069_0048'] = (15500, 17400, 5900, 7800)\n",
     "bubbles['840031_0055-1'] = (6450, 7050, 7425, 8025)\n",
     "bubbles['840091_0091-1'] = (9100, 10500, 5500, 6900)\n",
-    "\n",
     "bubbles['840031_0055-2'] = (11600, 13500, 1900, 3600)\n",
     "bubbles['840091_0091-2'] = (5800, 6900, 2400, 4000)"
    ]
@@ -42,9 +41,9 @@
    "outputs": [],
    "source": [
     "# output dir\n",
-    "save_dir = '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/bubble_artifacts_sup'\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)"
+    "out_dir = '../output/Fig1f-OnlineSupFig1c'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)"
    ]
   },
   {
@@ -119,7 +118,7 @@
     "    \n",
     "    k2 = k.split('-')[0]\n",
     "    \n",
-    "    # assign file path to TOPACIO OME-TIFF (THIS IMAGE IS NOT BACKGROUND SUBTRACTED)\n",
+    "    # assign file path to TOPACIO OME-TIFF\n",
     "    img_path = (f'/Volumes/T7 Shield/cylinter_input/TOPACIO_FINAL/tif/{k2}.ome.tif')\n",
     "    \n",
     "    dna = imread(img_path, key=0)\n",
@@ -136,7 +135,7 @@
     "    \n",
     "    plt.imshow(dna_crop_rgb, cmap='magma')\n",
     "    plt.title(k)\n",
-    "    plt.savefig(os.path.join(save_dir, f'{k}.png'), dpi=1000)\n",
+    "    plt.savefig(os.path.join(out_dir, f'{k}.png'), dpi=1000)\n",
     "    plt.show()\n",
     "    plt.close('all')"
    ]
