--- a/src/Fig3i,j.ipynb
+++ b/src/Fig3i,j.ipynb
@@ -30,15 +30,12 @@
     }
    ],
    "source": [
-    "save_dir = (\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/script_output/last_minute_figures'\n",
-    "    '/topacio_tiles')\n",
-    "if not os.path.exists(save_dir):\n",
-    "    os.makedirs(save_dir)\n",
+    "# out dir\n",
+    "out_dir = '../output/Fig3i,j'\n",
+    "if not os.path.exists(out_dir):\n",
+    "    os.makedirs(out_dir)\n",
     "\n",
-    "df = pd.read_csv(\n",
-    "    '/Users/greg/Dropbox (HMS)/Baker_QC_2021/topacio_tiles/counts.csv'\n",
-    ")\n",
+    "df = pd.read_csv('../input/Dataset1(TOPACIO)/counts.csv')\n",
     "percents = df.iloc[:, 2:].div(df['tile_count'], axis=0) * 100\n",
     "percents.index = df['sample'].astype('str')\n",
     "\n",
@@ -105,7 +102,7 @@
     "    labelspacing=0.01, loc='upper left', bbox_to_anchor=(1.0, 1.01)\n",
     ")\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(save_dir, 'topacio_tiles.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'topacio_tiles.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
@@ -134,7 +131,7 @@
     "ax.barh(bar_input.index, bar_input, color='k')\n",
     "ax.set_xlabel('Mean % tiles with artifacts', size=10, labelpad=10)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(os.path.join(save_dir, 'topacio_bar.pdf'))\n",
+    "plt.savefig(os.path.join(out_dir, 'topacio_bar.pdf'))\n",
     "plt.show()\n",
     "plt.close('all')"
    ]
